--- a/.env.template
+++ b/.env.template
@@ -11,3 +11,9 @@ MONGO_URL=
 MONGO_DB_NAME=NOC
 MONGO_USER=chezna
 MONGO_PASS=123456
+
+
+POSTGRES_URL=
+POSTGRES_DB=NOC
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=123456
