--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
   "devDependencies": {
     "@types/node": "^20.12.12",
     "@types/nodemailer": "^6.4.15",
+    "prisma": "^5.14.0",
     "rimraf": "^5.0.7",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "@prisma/client": "^5.14.0",
     "cron": "^3.1.7",
     "dotenv": "^16.4.5",
     "env-var": "^7.5.0",
