--- a/.env.template
+++ b/.env.template
@@ -7,13 +7,13 @@ MAILER_SECRET_KEY=
 
 PROD=false
 
-MONGO_URL=
+MONGO_URL=mongodb://chezna:123456@localhost:27017/
 MONGO_DB_NAME=NOC
 MONGO_USER=chezna
 MONGO_PASS=123456
 
 
-POSTGRES_URL=
+POSTGRES_URL="postgresql://postgres:123456@localhost:5432/NOC"
 POSTGRES_DB=NOC
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=123456
