--- a/package.json
+++ b/package.json
@@ -3,19 +3,27 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "tsnd --respawn --clear --clear src/app.ts",
+    "dev": "tsnd --respawn --clear src/app.ts",
     "build": "rimraf ./dist && tsc",
-    "start": "npm run build && node dist/app.js"
+    "start": "npm run build && node dist/app.js",
+    "docker:test": "docker compose -f docker-compose.test.yml --env-file .env.test up -d",
+    "test": "npm run docker:test && jest",
+    "test:watch": "npm run docker:test && jest --watch",
+    "test:coverage": "npm run docker:test && jest --coverage"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.12.12",
     "@types/nodemailer": "^6.4.15",
+    "jest": "^29.7.0",
     "prisma": "^5.14.0",
     "rimraf": "^5.0.7",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.1.4",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.5"
   },
